# aruna

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  compose_deploy.yaml  deny.toml  justfile  test.sh
api/: Cargo.toml
api/src/: auth.rs  cors.rs  csp.rs  error.rs  lib.rs  onboarding.rs  openapi.rs  ops.rs  portal.rs  quota_cache.rs  routes.rs  server.rs  server_state.rs  telemetry.rs
api/src/openapi/: mod.rs
api/src/routes/: blobs.rs  connectors.rs  credentials.rs  drs.rs  groups.rs  info.rs  jobs.rs  metadata.rs  mod.rs  notifications.rs  onboarding.rs  rocrate_import.rs  search.rs  staging.rs  sync.rs  tes.rs  users.rs
api/src/s3/: auth.rs  checksum.rs  cors.rs  error.rs  mod.rs  replication.rs  s3_server.rs  s3_service.rs  util.rs
api/tests/: api_effect_boundary_guard.rs  document_sync_publish_architecture_guard.rs  domain_guard.rs
aruna/: .env  .env2  Cargo.toml
aruna-data/: .env  Cargo.toml  config.toml
aruna-data/src/: error.rs  lib.rs  main.rs
aruna-data/src/api_json/: mod.rs  openapi.rs  paths.rs  request.rs  requests.rs  server.rs  util.rs
aruna-data/src/api_s3/: auth.rs  mod.rs  s3server.rs  s3service.rs  util.rs
aruna-data/src/config/: config.rs
aruna-data/src/controller/: controller.rs
aruna-data/src/io/: controller.rs  messages.rs  (+3 more)
aruna-data/tests/: commons.rs  tests.rs
aruna-doctor/: Cargo.toml
aruna-doctor/src/: error.rs  explorer.rs  info.rs  iroh_check.rs  main.rs  portal.rs  storage.rs  test_support.rs  tokens.rs
aruna-metadata/: .env  .env2  .env3  .env4  Cargo.toml
aruna-metadata/benches/: benchmarks.rs  persistors.rs
aruna-metadata/src/: error.rs  lib.rs  main.rs
aruna-metadata/tests/: api_tests.rs  commons.rs  sync_tests.rs  tests.rs
aruna-net/: Cargo.toml
aruna-net/src/: actor.rs  actor_handle.rs  con_actor.rs  connection_handler.rs  lib.rs  main.rs  utils.rs
aruna-permission/: Cargo.toml
aruna-permission/src/: casbin.rs  casbin_helper.rs  error.rs  lib.rs  manager.rs  paths.rs  token.rs
aruna-permission/tests/: integration.rs  test.rs  test_github_priv.pem  test_github_priv.pem.pub  test_google_priv.pem  test_google_priv.pem.pub  token_integration.rs
aruna-realm/: Cargo.toml
aruna-realm/src/: error.rs  lib.rs
aruna-task/: Cargo.toml
aruna-task/src/: error.rs  lib.rs  task_trait.rs
aruna/src/: bootstrap.rs  config.rs  error.rs  lib.rs  main.rs  portal.rs  shutdown.rs  telemetry.rs
aruna/tests/: compute_execution.rs  cors.rs  credentials.rs  drs.rs  groups.rs  holder_routing_e2e.rs  observability.rs  oidc_registration.rs  onboarding.rs  public_access.rs  replication.rs  s3_attributes.rs  s3_copy.rs  s3_operations.rs  s3_security.rs  self_service_groups.rs  shared.rs
blob/: Cargo.toml
blob/fixtures/: autoindex_apache_pre.html  autoindex_apache_table.html  autoindex_nginx.html  non_index.html
blob/src/: autoindex.rs  bao_tree.rs  blob.rs  error.rs  framing.rs  hash.rs  lib.rs  messages.rs  opendal.rs  s3.rs
components/server/: Cargo.toml
compute/: Cargo.toml
compute/src/: backend.rs  docker.rs  lib.rs  logs.rs  registry.rs  spec.rs  status.rs
compute/tests/: docker_backend.rs  units.rs
core/: Cargo.toml
core/src/: admin_document_reducer.rs  admin_documents.rs  alpn.rs  auth.rs  automerge.rs  compute.rs  consts.rs  document.rs  effects.rs  errors.rs  events.rs  gossip.rs  handle.rs  id.rs  keys.rs  keyspaces.rs  lib.rs  metadata.rs  metrics.rs  onboarding.rs  operation.rs  shutdown.rs  state_machine.rs  storage_entries.rs  stream.rs  structs.rs  task.rs  telemetry.rs  trace_context.rs  types.rs  user_id.rs  user_update_validation.rs  util.rs
e2e_tests/: Cargo.toml
e2e_tests/tests/: mod.rs
egress/: Cargo.toml
egress/src/: lib.rs
hack/: .env  Cargo.toml  website_mock.rs
hacks/: .env  Cargo.toml  Dockerfile  auth_mock.rs
metadata/: Cargo.toml
metadata/benches/: benchmarks.rs  persistors.rs
metadata/src/: error.rs  lib.rs  main.rs
net/: Cargo.toml
net/src/: connection_pool.rs  effect_handlers.rs  error.rs  gossip.rs  inbound.rs  irokle.rs  lib.rs  monitoring.rs  streams.rs  telemetry.rs
net/tests/: integration.rs
operations/: Cargo.toml
operations/src/: add_group_role.rs  add_realm_role.rs  add_user_to_group.rs  add_user_to_realm_role.rs  allocate_handle.rs  announce.rs  announce_realm_presence.rs  auth.rs  automerge_announce.rs  blob_holders.rs  bootstrap_onboarding_finalize.rs  check_permissions.rs  claim_initial_realm_admin.rs  consume_onboarding_secret.rs  create_group.rs  create_metadata_document.rs  create_onboarding_secret.rs  create_realm.rs  create_token.rs  create_user_record.rs  dashboard.rs  delete_metadata_document.rs  delete_onboarding_secret.rs  document_repository.rs  document_sync_outbox.rs  driver.rs  ensure_canonical_user_token_subject.rs  ensure_realm_config.rs  get_group.rs  get_metadata_document.rs  get_oidc_user.rs  get_realm_config.rs  get_realm_description.rs  get_realm_nodes.rs  get_user.rs  incoming.rs  incoming_automerge.rs  incoming_bao.rs  incoming_gossip.rs  inspect_onboarding_secret.rs  (+45 more)
operations/tests/: auth_validation.rs  automerge_sync.rs  group_replication.rs  holder_routing.rs  job_framework_restart.rs  metadata_cold_start.rs  metadata_create_backpressure.rs  metadata_crud.rs  metadata_export_routing.rs  metadata_forwarding.rs  metadata_materialization_recovery.rs  metadata_propagation_tail.rs  metadata_query_concurrency.rs  metadata_replication.rs  metadata_restart_persistence.rs  metadata_throughput.rs  multipart.rs  non_holder_topology.rs  notification_delivery.rs  placement_determinism.rs  resource_watch_delivery.rs  restart_traffic.rs  rocrate_drivers.rs  rocrate_remote.rs  shard_genesis_confirmation.rs  shard_manifest.rs  shard_manifest_convergence.rs  shard_manifest_protocol.rs  usage_deltas.rs  usage_replication.rs  user_access_replication.rs
scripts/compute-helper/: Cargo.toml  Dockerfile  build.sh
storage/: Cargo.toml
storage/src/: errors.rs  lib.rs  storage.rs
tasks/: Cargo.toml
tasks/src/: lib.rs
tools/: Cargo.toml
tools/src/: main.rs  test_token.rs
(+507 files in other folders)
