[workspace]
members = [
    "api",
    "aruna",
    "core",
    "search",
    "storage",
    "net",
    "tasks",
    "operations",
    "tools",
]
resolver = "3"

[workspace.package]
description = "A federated data orchestration network"
version = "3.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.93.0"

[workspace.dependencies]
async-channel = "2.5.0"
ahash = "0.8.12"
anyhow = "1.0.99"
async-trait = "0.1.89"
axum = "0.8.8"
axum-extra = { version = "0.10.1", features = ["query"] }
blake3 = { version = "1.8.2", features = ["serde"] }
casbin = { version = "2.10.1", features = ["explain", "logging"] }
chrono = { version = "0.4.42", features = ["serde"] }
data-encoding = "2.9.0"
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pem"] }
futures = "0.3.31"
futures-util = "0.3.31"
iroh = "0.95.1"
iroh-base = "0.95.1"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.30.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
parking_lot = { version = "0.12.4", features = ["deadlock_detection"] }
postcard = "1.1.3"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full", "tracing"] }
console-subscriber = "0.4.1"
tracing = "0.1.41"
tracing-opentelemetry = "0.31.0"
tracing-subscriber = { version = "0.3.20", features = [
    "env-filter",
    "time",
    "fmt",
    "registry",
] }
ulid = { version = "1.2.1", features = ["serde"] }
utoipa = { version = "5.4.0", features = [
    "chrono",
    "axum_extras",
    "ulid",
    "url",
] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[profile.release]
panic = "abort"
