[workspace]
members = [
    "api",
    "aruna",
    "blob",
    "core",
    "search",
    "storage",
    "net",
    "tasks",
    "operations",
    "tools",
]
# default-members = ["aruna"]
resolver = "3"

[workspace.package]
description = "A federated data orchestration network"
version = "3.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
rust-version = "1.93.0"

[workspace.dependencies]
ahash = "0.8.12"
automerge = "0.7.4"
autosurgeon = "0.10.1"
crossfire = "3.1.2"
async-trait = "0.1.89"
axum = "0.8.8"
axum-extra = { version = "0.12.5", features = ["query"] }
base64 = "0.22.1"
blake3 = { version = "1.8.3", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
crypto_box = "0.9.1"
data-encoding = "2.10.0"
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pem"] }
fjall = "3.1.1"
futures = "0.3.32"
futures-util = "0.3.32"
globset = "0.4.18"
iroh = "0.96.0"
iroh-base = "0.96.0"
iroh-gossip = "0.96.0"
iroh-io = "0.6.2"
iroh-quinn = "0.16.1"
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
opendal = { version = "0.55", features = ["services-postgresql", "services-fs", "services-s3", "services-http"] }
oxrdf = "0.3"
ro-crate-rs = { version = "0.5.0", features = ["rdf"] }
tokio-util = "0.7"
bytes = "1"
hex = "0.4"
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.31.0", features = ["rt-tokio"] }
parking_lot = { version = "0.12.5", features = ["deadlock_detection"] }
postcard = { version = "1.1.3", features = ["alloc"] }
rand = "0.9"
reqwest = { version = "0.12.28", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.50.0", features = ["full", "tracing"] }
console-subscriber = "0.5.0"
tracing = "0.1.44"
tracing-opentelemetry = "0.32.1"
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "time",
    "fmt",
    "registry",
] }
ulid = { version = "1.2.1", features = ["serde"] }
utoipa = { version = "5.4.0", features = [
    "chrono",
    "axum_extras",
    "ulid",
    "url",
] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }
smallvec = "1.15.1"
byteview = "0.10.1"
tempfile = "3.27.0"
sha2 = "0.11.0-rc.5"

[patch.crates-io]
# Temporarily fixes the dependency conflict of digest 0.10.x and 0.11.x until dependencies are updated
curve25519-dalek = { git = "https://github.com/das-Abroxas/curve25519-dalek", branch = "fix/digest-import" }

[profile.release]
panic = "abort"
