[workspace]
members = [
    "api",
    "aruna",
    "blob",
    "core",
    "storage",
    "net",
    "tasks",
    "operations",
    "aruna-doctor",
]
# default-members = ["aruna"]
resolver = "3"

[workspace.package]
description = "A federated data orchestration network"
version = "3.0.0-alpha.34"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/arunaengine/aruna"
rust-version = "1.95.0"

[workspace.dependencies]
# Workspace crates
aruna = { path = "aruna" }
aruna-api = { path = "api" }
aruna-blob = { path = "blob" }
aruna-core = { path = "core" }
aruna-net = { path = "net" }
aruna-operations = { path = "operations" }
aruna-storage = { path = "storage" }
aruna-tasks = { path = "tasks" }

# Third-party crates
ahash = "0.8.12"
async-trait = "0.1.89"
aws-config = { version = "1.9.0", default-features = false, features = [
    "default-https-client",
    "rt-tokio",
] }
aws-sdk-s3 = { version = "1.138.0", default-features = false, features = [
    "default-https-client",
    "http-1x",
    "rt-tokio",
] }
axum = "0.8.9"
axum-extra = { version = "0.12.6", features = ["query"] }
bao-tree = "0.16.0"
base64 = "0.22.1"
blake3 = { version = "1.8.5", features = ["serde"] }
byteview = "0.10.1"
bytes = "1.12.1"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive"] }
console-subscriber = "0.5.0"
craqle = { git = "https://github.com/arunaengine/craqle", rev = "cb38935800ea2df442536230274cdd070acabecd", features = [
    "iroh",
] }
crc-fast = "1.10.0"
crossfire = "3.1.19"
crypto_box = "0.9.1"
data-encoding = "2.11.0"
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.2.0", features = ["rand_core", "pem"] }
fjall = "3.1.6"
flate2 = "1.1.9"
futures = "0.3.32"
futures-core = "0.3.32"
futures-util = "0.3.32"
globset = "0.4.18"
hex = "0.4.3"
http = "1.4.2"
hyper = { version = "1.10.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = [
    "server",
    "server-auto",
    "http1",
    "http2",
    "tokio",
    "service",
] }
iroh = "1.0.2"
iroh-base = "1.0.2"
irokle = { git = "https://github.com/arunaengine/irokle.git", branch = "main", features = [
    "fjall",
    "iroh",
] }
iroh-io = "0.6.2"
iroh-quinn = "0.16.1"
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
lru = "0.18.1"
md5 = "0.8.1"
n0-future = "0.3.2"
opendal = { version = "0.58.0", features = [
    "services-postgresql",
    "services-fs",
    "services-ftp",
    "services-s3",
    "services-http",
    "services-webdav",
] }
opentelemetry = { version = "0.32.0", default-features = false, features = [
    "trace",
] }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = [
    "trace",
    "grpc-tonic",
] }
opentelemetry_sdk = { version = "0.32.1", default-features = false, features = [
    "trace",
    "rt-tokio",
] }
oxrdf = "0.3.3"
parking_lot = { version = "0.12.5", features = ["deadlock_detection"] }
percent-encoding = "2.3.2"
postcard = { version = "1.1.3", features = ["alloc"] }
prometheus-client = "0.23"
proptest = "1.11.0"
rand = "0.10.2"
reqwest = { version = "0.13.4", default-features = false, features = [
    "json",
    "rustls",
] }
s3s = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha1 = "0.11.0"
sha2 = "0.11.0"
smallvec = "1.15.2"
spargebra = "0.4.6"
tar = "0.4.46"
tempfile = "3.27.0"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["full", "tracing"] }
tokio-util = "0.7.18"
tower = { version = "0.5.3", features = ["limit"] }
tower-http = { version = "0.7.0", features = ["cors", "fs", "timeout"] }
tracing = "0.1.44"
tracing-opentelemetry = { version = "0.33.0", default-features = false }
tracing-subscriber = { version = "0.3.23", features = [
    "env-filter",
    "time",
    "fmt",
    "json",
    "registry",
] }
ulid = { version = "2.0.1", features = ["serde"] }
url = "2.5.8"
utoipa = { version = "5.5.0", features = [
    "chrono",
    "axum_extras",
    "ulid",
    "url",
] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[profile.release]
panic = "abort"
