[package]
name = "aruna-api"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ahash = { workspace = true }
aruna-core = { path = "../core" }
aruna-operations = { path = "../operations" }
aruna-storage = { path = "../storage" }
axum = "0.8.8"
base64 = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
ed25519-dalek = { workspace = true }
iroh = { workspace = true }
jsonwebtoken = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true }
