[package]
name = "aruna-api"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# Aruna modules
aruna-core = { path = "../core" }
aruna-operations = { path = "../operations" }

# General
ahash.workspace = true
base64.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
ulid.workspace = true

# REST
axum = "0.8.8"
byteview = { workspace = true }
blake3 = { workspace = true }
chrono = { workspace = true }
crypto_box = { workspace = true }
ed25519-dalek = { workspace = true }
jsonwebtoken = { workspace = true }
postcard = { workspace = true }
rand = { workspace = true }
iroh = { workspace = true }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["axum"] }

# S3
async-trait.workspace = true
futures-core = "0.3.32"
http = "1.4.0"
hyper = { version = "1.8.1", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["server", "http1", "http2", "tokio", "service", ] }
s3s = "0.13.0"

[dev-dependencies]
aruna-net = { path = "../net" }
aruna-storage = { path = "../storage" }
aruna-tasks = { path = "../tasks" }
tempfile.workspace = true
