[package]
name = "aruna-doctor"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
ahash = { workspace = true }
aruna = { workspace = true }
aruna-core = { workspace = true }
aruna-blob = { workspace = true }
aruna-storage = { workspace = true }
aruna-operations = { workspace = true }
aruna-net = { workspace = true }
aruna-tasks = { workspace = true }
aruna-api = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
byteview = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
craqle = { workspace = true }
dotenvy = { workspace = true }
ed25519-dalek = { workspace = true }
fjall = { workspace = true }
hex = { workspace = true }
iroh = { workspace = true }
jsonwebtoken = { workspace = true }
postcard = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tempfile = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
