[package]
name = "aruna-metadata"
version = {workspace = true}
edition = {workspace = true}


[dependencies]
ahash = {workspace = true}
anyhow = {workspace = true}
async-trait = {workspace = true}
blake3 = {workspace=true}
dotenvy = {workspace = true}
iroh = {workspace = true}
iroh-base = {workspace = true}
parking_lot = { workspace = true}
postcard = {workspace = true}
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = {workspace = true} 
tracing-subscriber = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }

aruna-net = {path = "../aruna-net"}
aruna-storage = {path = "../aruna-storage"}
aruna-realm = {path = "../aruna-realm"}
automerge = "0.6.1"
autosurgeon = "0.8.7"
axum = "0.8.4"
axum-extra = {version = "0.10.1", features = ["query"]}
bincode = { version= "2.0.1", features = ["serde"]}
chrono = { version = "0.4.41", features = ["serde"]}
ed25519-dalek = { version = "2.1.1", features = ["rand_core", "pem"] } # TODO: Move into workspace deps
opentelemetry = "0.29.1"
opentelemetry-otlp = { version = "0.29.0", features = ["grpc-tonic"]}
opentelemetry_sdk = { version = "0.29.0", features = ["rt-tokio"]}
rayon = "1.10.0"
reqwest = { version = "0.12.15", features = ["json"] }
roaring = "0.10.12"
serde_json = "1.0.140"
tantivy = "0.24.1"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing-opentelemetry = "0.30.0"
typetag = "0.2.20"
utoipa = { version = "5.3.1", features = ["chrono", "axum_extras", "ulid", "url"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.1", features = ["axum"] }

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true
