[package]
name = "aruna-metadata"
version = { workspace = true }
edition = { workspace = true }


[dependencies]
ahash = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
blake3 = { workspace = true }
dotenvy = { workspace = true }
ed25519-dalek = { workspace = true }
iroh = { workspace = true }
iroh-base = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
parking_lot = { workspace = true }
postcard = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true } 
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true } 
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
ulid = { workspace = true }
utoipa = { workspace = true }
utoipa-axum = { workspace = true }
utoipa-swagger-ui = { workspace = true }

aruna-net = {path = "../aruna-net"}
aruna-storage = {path = "../aruna-storage"}
aruna-realm = {path = "../aruna-realm"}
aruna-permission = {path = "../aruna-permission"}
automerge = "0.6.1"
autosurgeon = "0.8.7"
chrono = { version = "0.4.41", features = ["serde"]}
hex = "0.4.3"
rayon = "1.10.0"
reqwest = { version = "0.12.15", features = ["json"] }
roaring = "0.11.0"
tantivy = "0.24.1"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
typetag = "0.2.20"

[dev-dependencies]
criterion = { version = "0.6.0", features = ["html_reports", "async_tokio"] }

[[bench]]
name = "benchmarks"
harness = false

[profile.bench]
debug = true

[profile.release]
debug = true
