[package]
name = "aruna-net"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
async-trait = "0.1.88"
futures-util = "0.3.31"
iroh = "0.34.1"
log = "0.4.27"
n0-future = "0.1.2"
postcard = "1.1.1"
rand = "0.9.0"
serde = "1.0.219"
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "time"] }
ulid = { version = "1.2.1", features = ["serde"] }
