[package]
name = "aruna-permission"
version = "0.1.0"
edition = "2024"

[dependencies]
aruna-net = { path = "../aruna-net" }
aruna-realm = { path = "../aruna-realm" }
aruna-storage = { path = "../aruna-storage" }
nom = "8.0.0"
base64 = "0.22.1"
casbin = { workspace = true }
ulid = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
iroh = { workspace = true }
parking_lot = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
