[package]
name = "aruna-task"
version = "0.1.0"
edition = "2024"

[dependencies]
ahash = { workspace = true }
async-trait = { workspace = true }
chrono = { version = "0.4.41", features = ["serde"]}
iroh = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
parking_lot = { workspace = true }
postcard = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true } 
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { workspace = true }
ulid = { workspace = true }

aruna-storage = {path = "../aruna-storage"}
