[package]
name = "aruna"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
# Aruna modules
aruna-api = { path = "../api" }
aruna-blob = { path = "../blob" }
aruna-core = { path = "../core" }
aruna-net = { path = "../net" }
aruna-operations = { path = "../operations" }
aruna-storage = { path = "../storage" }

# The rest
base64.workspace = true
dotenvy = "0.15.7"
ed25519-dalek.workspace = true
iroh.workspace = true
jsonwebtoken.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
ulid.workspace = true