[package]
name = "aruna-blob"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
aruna-core = { path = "../core" }
aruna-net = { path = "../net" }
aruna-storage = { path = "../storage" }
aws-config = "1.8.14"
aws-sdk-s3 = "1.124.0"
blake3 = "1.8.3"
bytes.workspace = true
#crc-fast = "1.10.0"
crossfire.workspace = true
futures.workspace = true
iroh-io.workspace = true
iroh-quinn.workspace = true
md5 = "0.8.0"
opendal.workspace = true
sha2.workspace = true
tracing.workspace = true
thiserror.workspace = true
ulid.workspace = true
tokio.workspace = true