[package]
name = "aruna-blob"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aruna-core = { workspace = true }
aruna-egress = { workspace = true }
aruna-net = { workspace = true }
aruna-storage = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }
bao-tree = { workspace = true }
blake3 = { workspace = true }
bytes = { workspace = true }
crc-fast = { workspace = true }
crossfire = { workspace = true }
futures = { workspace = true }
iroh-io = { workspace = true }
md5 = { workspace = true }
opendal = { workspace = true }
postcard = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
url = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
ulid = { workspace = true }

[dev-dependencies]
axum = { workspace = true }
tempfile = { workspace = true }
tokio-util = { workspace = true }
