[package]
name = "aruna-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
smallvec = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
byteview = "0.10.0"
async-trait = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
