[package]
name = "aruna-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
automerge = { workspace = true }
autosurgeon = { workspace = true }
bytes.workspace = true
smallvec = { workspace = true }
ulid = { workspace = true }
thiserror = { workspace = true }
byteview = "0.10.1"
async-trait = { workspace = true }
blake3 = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
iroh = { workspace = true }
iroh-gossip = { workspace = true }
futures.workspace = true
ed25519-dalek = { workspace = true }
globset = { workspace = true }
oxrdf = { workspace = true }
serde_json = { workspace = true }
